# aram

./: .gitignore  AUTHORS  Makefile.am  README.md  configure.ac  odb-compile.sh  remake.sh  style.css
doxx/: audio-classes.uxf  audio-engine-diagram.uxf  class-diagram.uxf  gui-mini.uxf  gui.uxf
src/main/cc/: application.cc  application.h  main.cc
src/main/cc/audio/: audiosystem.cc  audiosystem.h  jackclient.cc  jackclient.h  types.h
src/main/cc/gui/: menudialog.cc  menudialog.h  window.cc  window.h  windowmanager.cc  windowmanager.h
src/main/cc/model/: audioclip.cc  audioclip.h  project.cc  project.h  types.h
src/main/cc/service/: audioengine.cc  audioengine.h  audiosystem.cc  audiosystem.h  buffers.cc  buffers.h  controller.cc  controller.h  database.cc  database.h  jackclient.cc  jackclient.h  system.cc  system.h  types.h
src/test/cc/model/: entity_test.cc
src/test/cc/service/: buffers_test.cc
